Factory,Observer,State,Strategy kalıplarının testleri yapıldı